# easy-install

./: .gitignore  Cargo.toml  Cross.toml  README.md  biome.json  builtin.json  deno.json  install.ps1  install.sh  justfile  package.json  readme.md  tsconfig.build.json  tsconfig.json
.github/workflows/: release.yml  test.yml
assets/: macos-13.txt  macos-14.txt  macos-15.txt  macos-latest.txt  ubuntu-24.04.txt  ubuntu-latest.txt  url-list.txt  windows-latest.txt
blog/: index.md  introduce.md
cli/: cli.js
dist-manifest/: 7zip.json  FiraCode.json  JetBrainsMono.json  alist.json  biome.json  boa.json  bun.json  esbuild.json  ffmpeg.json  fnm.json  graaljs.json  hermes.json  llrt.json  mpv-easy.json  mpv.json  node.json  pnpm.json  quickjs-ng.json  rcedit.json  ryubing.json  screentogif.json  uevr.json  wiztree.json  xst.json  yt-dlp.json  zig.json
src/: artifact.rs  ci.rs  config.rs  download.rs  env.rs  gh_token.rs  install.rs  lib.rs  manfiest.rs  optimize.rs  rule.rs  tool.rs  ty.rs  types.rs
src/install/: artifact.rs  builtin.rs  ci.rs  crateio.rs  file.rs  manfiest.rs  mod.rs  nightly.rs  repo.rs
test/: builtin.test.ts  download.test.ts  install.test.ts  repo.test.ts  rule.test.ts  tool.test.ts
ts/: cli.ts  const.ts  dist-manifest.ts  download.ts  ei.ts  env.ts  index.ts  install.ts  repo.ts  rule.ts  run.ts  setup.ts  tool.ts  type.ts
ts/install/: artifact.ts  builtin.ts  file.ts  index.ts  install.ts  manifest.ts  repo.ts
