[package]
name = "easy-install"
version = "1.3.9"
edition = "2024"
license = "MIT"
description = "easy-install"
repository = "https://github.com/easy-install/easy-install"
homepage = "https://github.com/easy-install/easy-install"
authors = ["ahaoboy"]
include = ["/src", "/Cargo.toml", "/README.md"]

[dependencies]
clap = { version = "4", features = ["derive", "std"], default-features = false }
is-musl = { git = "https://github.com/ahaoboy/is-musl", version = "0.1" }
is-admin = { git = " https://github.com/ahaoboy/is-admin.git", version = "0.1" }
crud-path = { git = "https://github.com/ahaoboy/crud-path.git", version = "0.1" }
which-shell = { git = " https://github.com/ahaoboy/which-shell.git", version = "0.1" }
easy-archive = { git = " https://github.com/ahaoboy/easy-archive.git", version = "0.2", default-features = false }
guess-target = { git = " https://github.com/ahaoboy/guess-target.git", version = "0.1" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = [
  "macros",
  "rt-multi-thread",
], default-features = false }
tracing = "0.1"
dirs = "6"
reqwest = { version = "0.12", features = ["json"], default-features = false }
regex = { version = "1", default-features = false, features = ["std"]}
tracing-subscriber = "0.3"
cargo-dist-schema = "0.30"
path-clean = "1"
anyhow = "1"
github-proxy = { version = "0.1", git = "https://github.com/ahaoboy/github-proxy" }
shellexpand = "3"

[features]
default = ["tar", "tar-gz", "tar-xz", "tar-bz", "tar-zstd", "zip"]
tar = ["easy-archive/tar"]
tar-gz = ["tar", "easy-archive/tar-gz"]
tar-xz = ["tar", "easy-archive/tar-xz"]
tar-bz = ["tar", "easy-archive/tar-bz"]
tar-zstd = ["tar", "easy-archive/tar-zstd"]
zip = ["easy-archive/zip"]


[target.'cfg(not(target_os = "windows"))'.dependencies]
openssl = { version = "0.10", features = ["vendored"] }

[profile.release]
debug = false
lto = true
strip = true
opt-level = 3
codegen-units = 1

[profile.bloaty]
debug = true
lto = false
strip = false
inherits = 'release'
